--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: kkiapay_flutter_sdk
-description: flutter kkiapay sdk
+description: KkiaPay allows businesses to safely receive payments by mobile money, credit card and bank account.
 
 
 # The following defines the version and build number for your application.
