--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ description: KkiaPay allows businesses to safely receive payments by mobile mone
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 version: 0.5.0
-author: kkiapay <support@kkiapay.me> 
+support: kkiapay <support@kkiapay.me> 
 homepage: 'https://github.com/boussarilatif/kkiapay-flutter-sdk'
 
 environment:
