--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,19 +17,20 @@ support: kkiapay <support@kkiapay.me>
 homepage: 'https://github.com/kkiapay/kkiapay-flutter-sdk'
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.7.0 <3.0.0"
+  #sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  http: ^0.12.0+2
+  http: ^0.13.1 #^0.12.0+2
 
-  webview_flutter: ^0.3.1
-  flutter_webview_plugin: ^0.3.10
+  webview_flutter: ^2.0.4 #^0.3.1
+  flutter_webview_plugin: ^0.3.11 #^0.3.10
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
+  cupertino_icons: ^1.0.2 #^0.1.2
 
 dev_dependencies:
   flutter_test:
