--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,5 +13,5 @@ jobs:
         with:
           accessToken: ${{ secrets.OAUTH_ACCESS_TOKEN }}
           refreshToken: ${{ secrets.OAUTH_REFRESH_TOKEN }}
-          relativePath: flutter.package
+          relativePath: .
           dryRunOnly: true
