--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,3 +15,4 @@ jobs:
           refreshToken: ${{ secrets.OAUTH_REFRESH_TOKEN }}
           relativePath: .
           dryRunOnly: false
+          skipTests: true
