--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,10 +2,10 @@ name: kkiapay_flutter_sdk
 description: KkiaPay allows businesses to safely receive payments by mobile money, credit card and bank account.
 version: 1.3.0
 support: kkiapay <support@kkiapay.me>
-homepage: 'https://github.com/kkiapay/kkiapay-flutter-sdk'
+homepage: "https://github.com/kkiapay/kkiapay-flutter-sdk"
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -14,18 +14,18 @@ dependencies:
 
   webview_flutter: ^3.0.4
   cupertino_icons: ^1.0.3
-  stacked: ^3.1.0+3
+  stacked: ^3.2.0
   stacked_hooks: ^0.2.1
-  stacked_services: ^0.9.9
+  stacked_services: ^1.0.0
   logger: ^1.1.0
-  stacked_generator: ^0.9.1+1
   url_launcher: ^6.1.7
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^1.0.0
-  build_runner: ^2.1.5
+  build_runner: ^2.2.0
+  stacked_generator: ^1.0.0
 
 flutter:
   uses-material-design: true
