--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,18 +1,42 @@
-name: Publish KkiaPay flutter sdk to Pub.dev
-on: push
+#name: Publish KkiaPay flutter sdk to Pub.dev
+#on: push
 
+#jobs:
+  #package-publishing:
+    #runs-on: ubuntu-latest
+    #steps:
+      #- name: "Checkout"
+        #uses: actions/checkout@master
+
+      #- name: ">> Flutter package <<"
+        #uses: k-paxian/dart-package-publisher@v1.4
+        #with:
+          #accessToken: ${{ secrets.OAUTH_ACCESS_TOKEN }}
+          #refreshToken: ${{ secrets.OAUTH_REFRESH_TOKEN }}
+          #relativePath: .
+          #dryRunOnly: false
+          #skipTests: true
+
+# .github/workflows/publish.yml
+name: Publish to pub.dev
+
+on:
+  push:
+    tags:
+    - 'v[0-9]+.[0-9]+.[0-9]+*' # tag pattern on pub.dev: 'v'
+
+# Publish using custom workflow
 jobs:
-  package-publishing:
+  publish:
+    permissions:
+      id-token: write # This is required for authentication using OIDC
     runs-on: ubuntu-latest
     steps:
-      - name: "Checkout"
-        uses: actions/checkout@master
-
-      - name: ">> Flutter package <<"
-        uses: k-paxian/dart-package-publisher@v1.4
-        with:
-          accessToken: ${{ secrets.OAUTH_ACCESS_TOKEN }}
-          refreshToken: ${{ secrets.OAUTH_REFRESH_TOKEN }}
-          relativePath: .
-          dryRunOnly: false
-          skipTests: true
+      - uses: actions/checkout@v3
+      - uses: dart-lang/setup-dart@v1
+      - name: Install dependencies
+        run: dart pub get
+      # Here you can insert custom steps you need
+      # - run: dart tool/generate-code.dart
+      - name: Publish
+        run: dart pub publish --force
