--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,34 +1,18 @@
-#name: Publish KkiaPay flutter sdk to Pub.dev
-#on: push
+name: Publish KkiaPay flutter sdk to Pub.dev
+on: push
 
-#jobs:
-  #package-publishing:
-    #runs-on: ubuntu-latest
-    #steps:
-      #- name: "Checkout"
-        #uses: actions/checkout@master
-
-      #- name: ">> Flutter package <<"
-        #uses: k-paxian/dart-package-publisher@v1.4
-        #with:
-          #accessToken: ${{ secrets.OAUTH_ACCESS_TOKEN }}
-          #refreshToken: ${{ secrets.OAUTH_REFRESH_TOKEN }}
-          #relativePath: .
-          #dryRunOnly: false
-          #skipTests: true
-
-# .github/workflows/publish.yml
-name: Publish KkiaPay flutter sdk to pub.dev
-
-on:
-  push:
-    tags:
-    - 'v[0-9]+.[0-9]+.[0-9]+*' # tag pattern on pub.dev: 'v'
-
-# Publish using the reusable workflow from dart-lang.
 jobs:
-  publish:
-    uses: dart-lang/setup-dart/.github/workflows/publish.yml@v1
-    # with:
-    #   working-directory: path/to/package/within/repository
+  package-publishing:
+    runs-on: ubuntu-latest
+    steps:
+      - name: "Checkout"
+        uses: actions/checkout@master
 
+      - name: ">> Flutter package <<"
+        uses: k-paxian/dart-package-publisher@v1.4
+        with:
+          accessToken: ${{ secrets.OAUTH_ACCESS_TOKEN }}
+          refreshToken: ${{ secrets.OAUTH_REFRESH_TOKEN }}
+          relativePath: .
+          dryRunOnly: false
+          skipTests: true
