--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -25,6 +25,7 @@ apply plugin: 'com.android.application'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
+    //ndkVersion '20.1.5948944'
     compileSdkVersion 33
 
     lintOptions {
