--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,8 @@ dependencies:
 
   webview_flutter: ^3.0.4
   cupertino_icons: ^1.0.3
-  stacked: ^3.2.0
+  stacked: 
+  #^3.2.0
   stacked_hooks: ^0.2.1
   stacked_services: ^1.0.0
   logger: ^1.1.0
