--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,11 +11,11 @@ dependencies:
   flutter:
     sdk: flutter
   stacked: ^3.4.1+1
-  stacked_services:
-  url_launcher:
-  http:
+  stacked_services: ^1.3.0
+  url_launcher: ^6.1.14
+  http: ^1.1.0
   webview_flutter: ^3.0.4
-  cupertino_icons:
+  cupertino_icons: ^1.0.6
 
 dev_dependencies:
   flutter_test:
