--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,21 +1,21 @@
 name: kkiapay_flutter_sdk
-description: KkiaPay allows businesses to safely receive payments by mobile money, credit card and bank account.
+description: KKiaPay allows businesses to safely receive payments by mobile money, credit card and bank account.
 version: 1.2.6
 support: kkiapay <support@kkiapay.me>
 homepage: "https://github.com/kkiapay/kkiapay-flutter-sdk"
 
 environment:
-  sdk: ">=2.17.0 <4.0.0"
+  sdk: '>=3.0.3 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  stacked: ^3.4.1+1
-  stacked_services: ^1.3.0
-  url_launcher: ^6.1.14
-  http: ^1.1.0
-  webview_flutter: ^3.0.4
-  cupertino_icons: ^1.0.6
+  stacked:
+  stacked_services:
+  url_launcher:
+  http:
+  webview_flutter:
+  cupertino_icons:
 
 dev_dependencies:
   flutter_test:
