--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,7 @@
 name: kkiapay_flutter_sdk
 description: KKiaPay allows businesses to safely receive payments by mobile money, credit card and bank account.
 version: 1.2.6
-support: kkiapay <support@kkiapay.me>
-homepage: "https://github.com/kkiapay/kkiapay-flutter-sdk"
+homepage: "https://kkiapay.me/"
 
 environment:
   sdk: '>=3.0.3 <4.0.0'
