--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,7 @@
 !**/ios/**/default.pbxuser
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
+
+example/.flutter-plugins-dependencies
+example/ios/Flutter/flutter_export_environment.sh
+
