--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,12 +9,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  stacked:
-  stacked_services:
-  url_launcher:            # using for wave payment
-  http:
-  webview_flutter:
-  cupertino_icons:
+  stacked: ^3.4.1+1
+  stacked_services: ^1.3.0
+  url_launcher: ^6.2.1           # using for wave payment
+  http: ^1.1.0
+  webview_flutter: ^4.4.1
+  cupertino_icons: ^1.0.6
 
 dev_dependencies:
   flutter_test:
