--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: kkiapay_flutter_sdk
 description: KKiaPay allows businesses to safely receive payments by mobile money, credit card and bank account.
-version: 1.2.7
+version: 1.2.8-dev.1
 homepage: "https://kkiapay.me/"
 
 environment:
@@ -14,6 +14,8 @@ dependencies:
   url_launcher: ^6.2.1           # using for wave payment
   http: ^1.1.0
   webview_flutter: ^4.4.1
+  webview_flutter_android: ^3.12.0
+  webview_flutter_wkwebview: ^3.9.2
   cupertino_icons: ^1.0.6
 
 dev_dependencies:
