--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: kkiapay_flutter_sdk
 description: KKiaPay allows businesses to safely receive payments by mobile money, credit card and bank account.
-version: 1.2.9-dev.2
+version: 1.2.10
 homepage: "https://kkiapay.me/"
 
 environment:
