--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -35,8 +35,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  kkiapay_flutter_sdk:
-    path: ../
+  kkiapay_flutter_sdk: ^1.2.10
+    #path: ../
 
 dev_dependencies:
   flutter_test:
