--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: kkiapay_flutter_sdk
 description: KKiaPay allows businesses to safely receive payments by mobile money, credit card and bank account.
-version: 1.2.12
+version: 1.3.0-dev.1
 homepage: "https://kkiapay.me/"
 
 environment:
@@ -9,13 +9,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  stacked: ^3.4.1+1
-  stacked_services: ^1.3.0
-  url_launcher: ^6.2.1           # using for wave payment
-  http: ^1.1.0
-  webview_flutter: ^4.4.1
-  webview_flutter_android: ^3.12.0
-  webview_flutter_wkwebview: ^3.9.2
+  stacked: ^3.4.2
+  stacked_services: ^1.4.0
+  url_launcher: ^6.2.5           # using for wave payment
+  http: ^1.2.1
+  webview_flutter: ^4.7.0
+  webview_flutter_android: ^3.16.0
+  webview_flutter_wkwebview: ^3.13.0
   cupertino_icons: ^1.0.6
 
 dev_dependencies:
