--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,8 +9,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
+
+  stacked_shared:
   stacked: ^3.4.2
-  stacked_services: ^1.4.0
+  stacked_services: ^1.5.0
   url_launcher: ^6.2.5           # using for wave payment
   http: ^1.2.1
   webview_flutter: ^4.7.0
