--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: kkiapay_flutter_sdk
 description: KKiaPay allows businesses to safely receive payments by mobile money, credit card and bank account.
-version: 1.3.0-beta.1
+version: 1.3.0-dev.17
 homepage: "https://kkiapay.me/"
 
 environment:
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   flutter_web_plugins:
     sdk: flutter
+  web: ^0.5.1
   plugin_platform_interface: ^2.0.2
 
 
