--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,16 +9,6 @@ jobs:
   publish:
     permissions:
       id-token: write # Required for authentication using OIDC
-    #uses: dart-lang/setup-dart/.github/workflows/publish.yml@v1
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: dart-lang/setup-dart@v1
-        with:
-          sdk: ${{ matrix.sdk }}
-      - name: Install dependencies
-        run: dart pub get
-      - name: Publish - dry run
-        run: dart pub publish --dry-run --skip-validation
-      - name: Publish
-        run: dart pub publish -f
+    uses: dart-lang/setup-dart/.github/workflows/publish.yml@v1.7.0
+    # with:
+    #   working-directory: path/to/package/within/repository
